sizing issue on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ button:active
 {
 	width:414px;
 	position:absolute;
+	height: calc(100% - 76px);
 	bottom:48px;
 	left:8px;
 	top:8px;
